All the required functionalities and interactions added, rating selection and parsing

--- a/myStyle.css
+++ b/myStyle.css
@@ -32,3 +32,12 @@ body
         font-family: "Overpass", sans-serif;
 
       }
+
+      .radio-btn{
+        display: none;
+      }
+
+      .radio-lbl{
+        background-color: aqua;
+        padding: 10px;
+      }
