--- a/myStyle.css
+++ b/myStyle.css
@@ -12,9 +12,16 @@ body
       .attribution {
         font-size: 11px;
         text-align: center;
+        position: absolute;
+        width: 100%;
+        display: block;
+        margin: 0 auto;
+        color: #f3f3f3;
+        top: 90%;
+       
       }
       .attribution a {
-        color: hsl(228, 45%, 44%);
+        color: hsl(217, 12%, 63%);
       }
       .container{
         width: 100%;
